feat: Added to the first page and its stylesheet and scriptallowing for various branches and features. Started Working on adding hidden text.

--- a/html/secondPage.html
+++ b/html/secondPage.html
@@ -1,1 +1,59 @@
-blank html file 
+<!DOCTYPE html>
+<html>
+<head> 
+    <meta charset="utf-8">
+    <title>Interactive Webpage!</title>
+
+    <!-- Link the stylesheet for the main page -->
+    <link rel="stylesheet" type="text/css" href="../css/secondPageStylesheet.css">
+
+</head>        
+
+    <body>
+
+        <!-- Create a basic frame for the website -->
+        <header>
+            <section id="contentWraper">
+                
+                <div id="titleWrapper">
+                    <h1> Welcome to Interactive's Second Webpage</h1>
+                    <p>- Where your interactions are taken seriously</p>
+                </div>
+                
+                <hr>
+
+                <div id="navWrapper">
+                    <nav>
+                        <ul>
+                            <li> <a href="index.html">Home!</a> </li>
+                            <li> <a href="secondPage.html">secondPage!</a> </li>
+                        </ul>
+                    </nav>
+                </div>
+            </section>
+        </header>
+
+        <main> 
+            <div class="contentWrapper">
+
+            </div>
+        </main>
+
+        <footer>
+            <div id="contentWrapper">
+
+                <div id="infoWrapper">
+
+                </div>
+
+                <div id="dateWrapper">
+
+                </div>
+            </div>
+        </footer>
+
+        <!-- Link the script for the main page -->
+        <script src="../scripts/indexScript.js"></script>
+    </body>
+
+</html>
