--- a/secondPage.html
+++ b/secondPage.html
@@ -5,7 +5,7 @@
     <title>Interactive Webpage!</title>
 
     <!-- Link the stylesheet for the main page -->
-    <link rel="stylesheet" type="text/css" href="../css/secondPageStylesheet.css">
+    <link rel="stylesheet" type="text/css" href="css/secondPageStylesheet.css">
 
 </head>        
 
@@ -53,7 +53,7 @@
         </footer>
 
         <!-- Link the script for the main page -->
-        <script src="../scripts/indexScript.js"></script>
+        <script src="scripts/indexScript.js"></script>
     </body>
 
 </html>
