implementing the snake game

--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
                 </div>
             </footer>
 
+            <!-- Link script for snake game-->
+            <script src="scripts/snakeScript.js"></script>
             <!-- Link the script for the main page -->
             <script src="scripts/indexScript.js"></script>
             <!-- Link the script for interactive bits of the page -->
