added login form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="contentWrapper">
                     
                     <div id="titleWrapper">
-                        <h1> Welcome to Interactive Webpage</h1>
+                        <h1> Welcome to Interactive Webpage<span class="USERNAME hidden">, username</span></h1>
                         <p>- Where your interactions are taken seriously.    <span class="hiddenUntilMouseOver"> -- Very Very Seriously...</span></p>
                     </div>
                     
@@ -191,7 +191,7 @@
                                         <label for="username">Username:</label><br>
                                         <input type="text" id="username" name="username"><br>
                                         <label for="password">Password:</label><br>
-                                        <input type="text" id="password"name="password">
+                                        <input type="text" id="password" name="password">
 
                                         <input type="submit">
                                     </form>
@@ -232,6 +232,11 @@
 
                     <div id="dateWrapper">
                         <p id="dateStampEl"> This is crazy! Today's date is </p>
+                    </div>
+
+                    <div id="user-info">
+                        <p>Log in to save some arbitrary things! well... I guess.. only if you want to.. <span class='hiddenUntilMouseOver'>you want the truth? oh.. 
+                            thank you so much! I-I'm just lonely. Be my friend<span class='USERNAME'> user</span>?</span></p>
                     </div>
                 </div>
             </footer>
