--- a/secondPage.html
+++ b/secondPage.html
@@ -35,7 +35,7 @@
 
         <main> 
             <div class="contentWrapper">
-
+               
             </div>
         </main>
 
@@ -54,6 +54,8 @@
 
         <!-- Link the script for the main page -->
         <script src="scripts/indexScript.js"></script>
+         <!-- Link the script for interactive bits of the page -->
+        <script src="scripts/interactiveObjects.js"></script>
     </body>
 
 </html>
