Finished signup, login
Finished and fixed log in, added another sign in form so that new users can be created at any time. Log in button in the text key will change the user when used

--- a/secondPage.html
+++ b/secondPage.html
@@ -35,7 +35,15 @@
 
         <main> 
             <div class="contentWrapper">
-               
+                <form action="signup" method="post" class="hidden" id="signupForm2">
+                    <p class="formLabel"> Signup: </p> <br>
+                    <label for="username">Username:</label><br>
+                    <input type="text" id="username" name="username"><br>
+                    <label for="password">Password:</label><br>
+                    <input type="text"id="password"name="password">
+
+                    <input type="submit">
+                </form>
             </div>
         </main>
 
