adding local, session and user scores

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                                 <canvas id="snakeCanvas" width="400" height="400"></canvas> 
                                 <div class="border"></div>
 
+                                <p class="game-score"> Score: </p>
                             </div>
 
                             <div class="border"></div>
